# ChangeLog for dev-perl/Text-Iconv
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Iconv/ChangeLog,v 1.25 2006/09/04 00:34:19 kumba Exp $

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> Text-Iconv-1.4.ebuild:
  Marked stable on mips.

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Text-Iconv-1.4.ebuild:
  Adding perl dep; fixed DEPEND

  24 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> Text-Iconv-1.4.ebuild:
  Add ~x86-fbsd keyword.

  08 Apr 2006; <mcummings@gentoo.org> Text-Iconv-1.4.ebuild:
  Keywording ~mips, tested on raq2

  13 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org> Text-Iconv-1.4.ebuild:
  Stable on hppa

  06 May 2005; Michael Hanselmann <hansmi@gentoo.org> Text-Iconv-1.4.ebuild:
  Added to ~hppa.

  29 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  -Text-Iconv-1.2.ebuild, -Text-Iconv-1.2-r1.ebuild, Text-Iconv-1.4.ebuild:
  Cleaning for mirror

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  14 Dec 2004; Markus Rothe <corsair@gentoo.org> Text-Iconv-1.4.ebuild:
  Stable on ppc64

  01 Nov 2004; Markus Rothe <corsair@gentoo.org> Text-Iconv-1.4.ebuild:
  Marked ~ppc64. bug #66216

  19 Oct 2004; Dylan Carlson <absinthe@gentoo.org> Text-Iconv-1.4.ebuild:
  Stable on amd64.

  19 Aug 2004; Gustavo Zacarias <gustavoz@gentoo.org> Text-Iconv-1.4.ebuild:
  Stable on sparc

  17 Aug 2004; Aron Griffis <agriffis@gentoo.org> Text-Iconv-1.4.ebuild:
  stable on alpha, ia64 and x86

*Text-Iconv-1.4 (30 Jul 2004)

  30 Jul 2004; Michael Cummings <mcummings@gentoo.org> +Text-Iconv-1.4.ebuild:
  New version on CPAN

  04 May 2004; Bryan Østergaard <kloeri@gentoo.org> Text-Iconv-1.2-r1.ebuild:
  Stable on alpha.

*Text-Iconv-1.2-r1 (21 Jun 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 