@@ -1,13 +1,13 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Iconv/Text-Iconv-1.4.ebuild,v 1.15 2006/11/12 05:33:40 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Iconv/Text-Iconv-1.4.ebuild,v 1.16 2007/01/19 16:57:57 mcummings Exp $
 
 EAPI="prefix"
 
 inherit perl-module
 
 DESCRIPTION="A Perl interface to the iconv() codeset conversion function"
-HOMEPAGE="http://cpan.org/modules/by-module/Text/${P}.readme"
+HOMEPAGE="http://search.cpan.org/~mpiotr"
 SRC_URI="mirror://cpan/authors/id/M/MP/MPIOTR/${P}.tar.gz"
 
 LICENSE="Artistic"
@@ -16,4 +16,3 @@ KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86"
 IUSE=""
 
 DEPEND="dev-lang/perl"
-RDEPEND="${DEPEND}"
