@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Text-Iconv
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Iconv/ChangeLog,v 1.25 2006/09/04 00:34:19 kumba Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Iconv/ChangeLog,v 1.26 2007/01/19 16:57:57 mcummings Exp $
+
+  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
+  Text-Iconv-1.4.ebuild:
+  Ebuild maintenance
 
   04 Sep 2006; Joshua Kinard <kumba@gentoo.org> Text-Iconv-1.4.ebuild:
   Marked stable on mips.
